--- a/Public/views/login.html
+++ b/Public/views/login.html
@@ -2,13 +2,37 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">  
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Co-evolution</title>
+    <link rel="stylesheet" href="../Css/styles.css" />
     <title>Document</title>
 </head>
 <body>
 
-    
+ <div class="main">
+    <div class="lateral1">
+        <h1>Te damos la bienvenida: </h1>
+    </div>
+    <div class="lateral2">
+        <form action="/">
+            <label for="email"> Email: </label>    
+            <input type="text"  name="email">                
+            <label for="Contraseña"> Contraseña: </label>    
+            <input type="text"  name="Contraseña">                
+            <a href="#"> Olvidaste tu Contraseña </a>
+            <button><a href="./loginBefore.html">Ingresar</a></button>
+            </form>
+
+        <img src="../Images/Logo.PNG" alt="">
+        <a href="#" class="terminos"> Terminos y condiciones - politicas de privacidad</a>
+        
+    </div>
+ </div>
+
     
 </body>
 </html>
