--- a/src/views/loginBefore.html
+++ b/src/views/loginBefore.html
@@ -4,9 +4,23 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+        <link rel="stylesheet" href="../../Public/Css/styles.css">
+    <title>Playground Co-evolution</title>
 </head>
 <body>
     <h1>continuara</h1>
+    <div class="main">
+            <div class="encabezado">
+                <h2>Playground</h2>
+            </div>
+            <div class="mensaje"> <h1>!Hola, <strong>Andres Steven</strong> </h1></div>
+            <div class="menu">
+                <article></article>
+                
+            </div>
+            <div class="piePagina"></div>
+
+
+    </div>
 </body>
 </html>
